# lucknow-live-events

./: .env.example  .gitignore  Makefile  README.md  render.yaml  vercel.json
backend/: Dockerfile  check_db.py  pyproject.toml  requirements.txt  vercel.json
backend/ai/: classification_agent.py  extraction_agent.py  gemini_client.py  moderation_agent.py
backend/alembic/: env.py
backend/alembic/versions/: 20260420120000_initial_schema.py  20260421120000_search_vector_trigger.py  5568dd7d9489_add_date_tba_and_community_submissions.py  f89f806ce2ff_add_source_status_field.py
backend/api/: main.py
backend/api/core/: config.py  database.py  deps.py  security.py
backend/api/models/: __init__.py  base.py  crawl.py  event.py  moderation.py  raw_event.py  source.py  submission.py
backend/api/routers/: __init__.py  discovery.py  events.py  feeds.py  submissions.py
backend/api/routers/admin/: __init__.py  auth.py  discovery.py  events.py  moderation.py  sources.py  stats.py
backend/api/schemas/: admin.py  discovery.py  event.py  submission.py
backend/api/services/: __init__.py  admin_service.py  discovery_service.py  event_service.py  submission_service.py
backend/ingestion/: dedup.py  location_data.py  pipeline.py  publish_score.py  relevance.py  storage.py
backend/ingestion/adapters/: base.py  generic.py  playwright_util.py  static.py
backend/ingestion/normalizers/: date.py  location.py  text.py
backend/workers/: celery_app.py  schedules.py  utils.py
backend/workers/tasks/: crawl.py  discovery.py  feeds.py  pipeline.py  submissions.py  watchlist.py
(+48 files in other folders)
